--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
      
 <h1>Mavpa Site Com</h1>
 <h2>фото мавп смішні картинки</h2>
+<img src="photo mavpa.jpg" alt="foto">
+<p>а ось це андрій цап</p>
 
 </body>
 </html>
