--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h2>фото мавп смішні картинки</h2>
 <img src="photo mavpa.jpg" alt="foto">
 <p>а ось це андрій цап</p>
+<h6>good</h6>
 
 </body>
 </html>
